# ic-react-native-jwt-auth

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  app.json  bun.lockb  dfx.json  package.json  rust-toolchain.toml
.github/workflows/: ic-backend-tests.yml
scripts/: build-canister.sh  download-pocket-ic.sh  integration-test.sh  unit-test.sh
src/app/: app.config.js  app.json  index.js  metro.config.js  package.json
src/app/android/: settings.gradle
src/app/android/app/: build.gradle
src/app/android/app/src/main/: AndroidManifest.xml
src/app/android/app/src/main/java/io/icp0/jwtauthdemo/: MainActivity.kt  MainApplication.kt
src/app/android/app/src/main/res/values/: strings.xml
src/app/ios/: Podfile
src/app/ios/icreactnativejwtauthapp/: Info.plist
src/app/ios/icreactnativejwtauthapp.xcodeproj/: project.pbxproj
src/app/ios/icreactnativejwtauthapp.xcodeproj/xcshareddata/xcschemes/: icreactnativejwtauthapp.xcscheme
src/app/ios/icreactnativejwtauthapp.xcworkspace/: contents.xcworkspacedata
src/app/src/: App.tsx  Home.tsx
src/app/src/lib/: auth0.ts  backend.ts  common.ts  ic.ts  utils.ts
src/app_backend/: package.json
src/app_backend/src/: index.ts
src/ic_backend/: Cargo.toml  ic_backend.did
src/ic_backend/src/: delegation.rs  id_token.rs  jwks.json  lib.rs  state.rs  types.rs  users.rs  utils.rs
src/ic_backend/tests/: authenticated.rs  controller_only.rs  delegation.rs
src/ic_backend/tests/common/: auth_provider.rs  canister.rs  identity.rs  mod.rs  test_env.rs
src/ic_backend_types/: Cargo.toml
