[package]
name = "ic_backend"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
ic-stable-structures = "0.6"
ic-certification = "2.5"
canister_sig_util = { git = "https://github.com/dfinity/internet-identity", tag = "release-2024-04-05" }

serde.workspace = true
serde_json = "1.0"
serde_bytes.workspace = true

jsonwebtoken-rustcrypto = "1.2"
hex = "0.4"
getrandom = { version = "0.2", features = ["custom"] }
base64 = "0.21.0"
sha2 = "0.10.8"

ic_backend_types.workspace = true

[dev-dependencies]
hex-literal = "0.2.1"
pocket-ic = "2.2"
jwt-simple = "0.12"
ic-agent = "0.34"
ring = "0.17"
ic-representation-independent-hash = "2.5"
